# mimir

./: Cargo.toml
mimir-core/: Cargo.toml
mimir-core/src/: error.rs  grammar.lalrpop  lib.rs  parser.rs
mimir-core/src/domain/: complex.rs  float.rs  integer.rs  mod.rs  rational.rs
mimir-core/src/expr/: fmt.rs  fun.rs  mod.rs  mul.rs  num.rs  pow.rs
mimir-core/src/operation/: normalize.rs
mimir-core/src/poly/: add.rs  mod.rs  mul.rs  multivariate.rs
mimir-macros/: Cargo.toml
mimir-macros/src/: lib.rs
src/: context.rs  expr.rs  grammar.lalrpop  main.rs  parser.rs  strutils.rs
src/expr/: add.rs  fmt.rs  fun.rs  mod.rs  mul.rs  num.rs  var.rs
src/operation/: mod.rs  normalize.rs  reduce.rs
