[package]
name = "mimir"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["mimir-core", "mimir-macros"]

[workspace.dependencies]
thiserror = "2.0.12"
once_cell = "1.21.3"
itertools = "0.14.0"
termion = "4.0.5"

[dependencies]
mimir-macros = { path = "mimir-macros" }
mimir-core = { path = "mimir-core" }
rustyline = "15.0.0"
termion.workspace = true
